[gd_scene load_steps=4 format=3 uid="uid://5vm2iatgmrxs"]

[ext_resource type="Script" path="res://Scenes/SimpleRollPage/Scripts/simple_roll.gd" id="1_tqmuk"]
[ext_resource type="PackedScene" uid="uid://2jcpfncolph" path="res://Scenes/Common/Labels/settings_managed_label.tscn" id="2_gwd73"]
[ext_resource type="PackedScene" uid="uid://c6j8433ge4v87" path="res://Scenes/Common/Buttons/up_down_buttons.tscn" id="3_6vjsp"]

[node name="SimpleRoll" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_tqmuk")

[node name="VerticalLayout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VerticalLayout"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DiceGrid" type="HFlowContainer" parent="VerticalLayout/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DiceResult" parent="VerticalLayout" instance=ExtResource("2_gwd73")]
layout_mode = 2
text = "ROLL"

[node name="PropBar" type="VBoxContainer" parent="VerticalLayout"]
layout_mode = 2

[node name="UpDownButtonBar" type="HBoxContainer" parent="VerticalLayout/PropBar"]
layout_mode = 2

[node name="NumDiceUpDown" parent="VerticalLayout/PropBar/UpDownButtonBar" instance=ExtResource("3_6vjsp")]
layout_mode = 2
size_flags_horizontal = 3
postfix = "d"
disallow_zero = true

[node name="ModifierUpDown" parent="VerticalLayout/PropBar/UpDownButtonBar" instance=ExtResource("3_6vjsp")]
layout_mode = 2
size_flags_horizontal = 3
show_plus_minus = true

[node name="NoDiceLabel" parent="." instance=ExtResource("2_gwd73")]
layout_mode = 1
text = "No Dice Added"
